--- a/app/src/main/res/layout/item_token.xml
+++ b/app/src/main/res/layout/item_token.xml
@@ -125,6 +125,7 @@
                             android:layout_gravity="center_horizontal"
                             android:fontFamily="@font/font_regular"
                             android:text="@string/unknown_balance_without_symbol"
+                            android:textColor="@color/white"
                             android:textSize="12sp"
                             android:visibility="gone"/>
 
@@ -169,7 +170,8 @@
                             android:fontFamily="@font/font_regular"
                             android:layout_marginEnd="@dimen/dp5"
                             android:text="@string/unknown_balance_without_symbol"
-                            android:textSize="12sp" />
+                            android:textSize="12sp"
+                            android:textColor="@color/white"/>
 
                         <TextView
                             android:id="@+id/text_24_hrs"
@@ -178,7 +180,8 @@
                             android:layout_gravity="center_horizontal"
                             android:fontFamily="@font/font_regular"
                             android:text="@string/unknown_balance_without_symbol"
-                            android:textSize="12sp" />
+                            android:textSize="12sp"
+                            android:textColor="@color/white"/>
 
                     </LinearLayout>
 
