--- a/app/src/main/res/layout/layout_manage_tokens_toolbar.xml
+++ b/app/src/main/res/layout/layout_manage_tokens_toolbar.xml
@@ -61,7 +61,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_gravity="center_vertical"
-                android:src="@drawable/ic_network_2" />
+                android:src="@drawable/ic_network_2"
+                app:tint="@color/white"/>
 
             <TextView
                 android:layout_width="wrap_content"
