--- a/app/src/main/res/menu/menu_filter_network.xml
+++ b/app/src/main/res/menu/menu_filter_network.xml
@@ -9,5 +9,6 @@
         android:orderInCategory="20"
         android:title="@string/select_active_networks"
         app:showAsAction="always"
+        android:iconTint="@color/white"
         />
 </menu>
