--- a/app/src/main/res/menu/menu_qr.xml
+++ b/app/src/main/res/menu/menu_qr.xml
@@ -9,5 +9,6 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orderInCategory="20"
     android:title="@string/my_wallet_address"
     app:showAsAction="always"
+    android:iconTint="@color/white"
     />
 </menu>
