--- a/app/src/main/res/menu/menu_scan.xml
+++ b/app/src/main/res/menu/menu_scan.xml
@@ -7,5 +7,6 @@
         android:icon="@drawable/ic_camera_scan"
         android:title="@string/scan_qr"
         app:showAsAction="always"
+        android:iconTint="@color/white"
         />
 </menu>
