--- a/app/src/main/res/menu/menu_scan_wc.xml
+++ b/app/src/main/res/menu/menu_scan_wc.xml
@@ -7,5 +7,6 @@
         android:icon="@drawable/ic_camera_scan"
         android:title="@string/title_wallet_connect"
         app:showAsAction="always"
+        android:iconTint="@color/white"
         />
 </menu>
