--- a/app/src/main/res/menu/menu_share.xml
+++ b/app/src/main/res/menu/menu_share.xml
@@ -6,5 +6,6 @@
         android:icon="@drawable/ic_share_dark_24dp"
         android:title="@string/action_share"
         app:showAsAction="always"
+        android:iconTint="@color/white"
         />
 </menu>
