--- a/app/src/main/res/menu/menu_wallet.xml
+++ b/app/src/main/res/menu/menu_wallet.xml
@@ -9,6 +9,7 @@
         android:orderInCategory="1"
         android:title="@string/action_scan_dapp"
         app:showAsAction="always"
+        android:iconTint="@color/white"
         />
     <item
         android:id="@+id/action_my_wallet"
@@ -16,5 +17,6 @@
         android:orderInCategory="20"
         android:title="@string/my_wallet_address"
         app:showAsAction="always"
+        android:iconTint="@color/white"
         />
 </menu>
