--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -3,7 +3,7 @@
     xmlns:custom="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/cryption_gradient">
+    android:background="@color/white">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,16 +17,18 @@
             android:id="@+id/splash_image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/ic_globe_white"
-            android:gravity="center_horizontal"/>
+            android:background="@drawable/globe_gradient_logo"
+            android:gravity="center_horizontal"
+            android:layout_marginBottom="40px"/>
 
         <TextView
             android:layout_marginTop="9dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="26sp"
-            android:textColor="@color/white"
+            android:textColor="@color/colorPrimaryDarkCryption"
             android:gravity="center_horizontal"
+            android:fontFamily="@font/font_bold"
             android:text="@string/welcome_to_alphawallet"/>
 
     </LinearLayout>
